# MAI-UI-Client

./: .gitignore  IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  analyze_logs.py  app_mapping.yaml  main.py  pyproject.toml  requirements.txt  setup.py
examples/: basic_tasks.py
mai_phone_agent/: __init__.py  cli.py  device_bridge.py  device_bridge_simple.py  executor.py  integration.py  utils.py
openspec/: project.md
openspec/changes/archive/2026-01-04-add-phone-agent-framework/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-04-add-phone-agent-framework/specs/agent-integration/: spec.md
openspec/changes/archive/2026-01-04-add-phone-agent-framework/specs/android-device-bridge/: spec.md
openspec/changes/archive/2026-01-04-add-phone-agent-framework/specs/autonomous-task-executor/: spec.md
openspec/changes/archive/2026-01-04-add-phone-agent-framework/specs/phone-agent-cli/: spec.md
openspec/specs/agent-integration/: spec.md
openspec/specs/android-device-bridge/: spec.md
openspec/specs/autonomous-task-executor/: spec.md
openspec/specs/phone-agent-cli/: spec.md
phone_agent/: __init__.py  cli.py  config.py  device_bridge.py  executor.py  integration.py
site/: index.html  leaderboard.json  style.css
src/: mai_naivigation_agent.py  prompt.py
